2020-05-01  Jose E. Marchesi  <jemarch@gnu.org>

	* testsuite/poke.pkl/optcond-16.pk: New test.
	* testsuite/poke.pkl/optcond-17.pk: Likewise.

2020-05-01  Jose E. Marchesi  <jemarch@gnu.org>

	* doc/poke.texi (The Color Registry): Fix example.

2020-05-01  Jose E. Marchesi  <jemarch@gnu.org>

	* pickles/color.pk: Reduce, and add comments.
	* pickles/rgb24.pk: New file.
	* pickles/Makefile.am (dist_pkgdata_DATA): Add rgb24.pk.
	* testsuite/poke.rgb24/rgb24.exp: New testsuite.
	* testsuite/poke.rgb24/rgb24-1.pk: New test.
	* doc/poke.texi (RGB24 Encoding): New section.

2020-05-01  Jose E. Marchesi  <jemarch@gnu.org>

	* pickles/color.pk: New file.
	* pickles/Makefile.am (dist_pkgdata_DATA): Add color.pk.
	* testsuite/poke.color/color.exp: New testsuite.
	* testsuite/poke.color/color-1.pk: New test.
	* testsuite/poke.color/color-2.pk: Likewise.
	* testsuite/poke.color/color-3.pk: Likewise.
	* testsuite/poke.color/color-4.pk: Likewise.
	* doc/poke.texi (Colors): New chapter.
	(The Color Registry): New section.
	* HACKING (Testing Pickles): New section.
	(Writing Documentation): New chapter.
	(Documenting Pickles): New section.

2020-05-01  Jose E. Marchesi  <jemarch@gnu.org>

	* HACKING: update the libtool call for gdb line.

2020-05-01  Jose E. Marchesi  <jemarch@gnu.org>

	* doc/poke.texi (Poking Structs): New section.

2020-05-01  Jose E. Marchesi  <jemarch@gnu.org>

	* lib/pkl-gen.c: Remove trailing whitespaces.

2020-05-01  Jose E. Marchesi  <jemarch@gnu.org>

	* lib/pkl-gen.c (pkl_gen_pr_if_stmt): Optimize constant
	expressions in conditional statements.
	* testsuite/poke.pkl/if-4.pk: New test.
	* testsuite/poke.pkl/if-5.pk: Likewise.

2020-05-01  Jose E. Marchesi  <jemarch@gnu.org>

	* lib/libpoke.c (pk_disassemble_function): Do not destroy the
	disassembled program.

2020-05-01  Jose E. Marchesi  <jemarch@gnu.org>

	* lib/pkl-gen.c (pkl_gen_pr_comp_stmt): Optimize empty compound
	statements away.

2020-05-01  Jose E. Marchesi  <jemarch@gnu.org>
