@@ -6,3 +6,11 @@ export _gl_TS_headers = *.h
 local-checks-to-skip =                  \
    sc_tight_scope \
    sc_prohibit_gnu_make_extensions
+
+sc_jemarchism.z:
+	@prohibit='(^|[ ])[Ll]ets( |$$)'				\
+	in_vc_files='$(texinfo_suffix_re_)'				\
+	halt='found use of "lets" in Texinfo source'			\
+	  $(_sc_search_regexp)
+
+local-checks-available=sc_jemarchism
