@@ -1,3 +1,9 @@
+2020-05-02  John Darrington <john@darrington.wattle.id.au>
+
+	* doc/poke.texi (Poking Structs): Replace "Lets" with "Let's".
+	* cfg.mk (sc_jemarchism.z): New rule.
+	* cfg.mk (local-checks-available): Add it.
+
 2020-05-01  Jose E. Marchesi  <jemarch@gnu.org>
 
 	* testsuite/poke.pkl/optcond-16.pk: New test.
